fix: 로그 경고문 해결