@@ -1,10 +1,10 @@
 package backend.techeerzip.global.logger;
 
-import java.util.Arrays;
-import java.util.List;
-
 import jakarta.servlet.http.HttpServletRequest;
-
+import java.io.IOException;
+import java.util.Date;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
@@ -13,6 +13,8 @@ import org.springframework.stereotype.Component;
 
 @Component
 public class CustomLogger {
+
+    // ANSI 색상 상수
     private static final String ANSI_RESET = "\u001B[0m";
     private static final String ANSI_RED = "\u001B[31m";
     private static final String ANSI_GREEN = "\u001B[32m";
@@ -21,8 +23,20 @@ public class CustomLogger {
     private static final String ANSI_CYAN = "\u001B[36m";
     private static final String ANSI_PURPLE = "\u001B[35m";
 
-    private static final List<String> SENSITIVE_FIELDS =
-            Arrays.asList("password", "token", "secret", "authorization");
+    // MDC 키 상수
+    private static final String MDC_CONTEXT = "context";
+    private static final String MDC_TRACE = "trace";
+
+    // 기타 상수
+    private static final String REDACTED = "[REDACTED]";
+    private static final String LEVEL_ERROR = "error";
+    private static final String LEVEL_WARN = "warn";
+    private static final String LEVEL_INFO = "info";
+
+    private static final List<String> SENSITIVE_FIELDS = List.of(
+            "password", "token", "secret", "authorization"
+    );
+
     private final Logger logger;
     private final String logLevel;
 
@@ -32,31 +46,31 @@ public class CustomLogger {
     }
 
     public void info(String message) {
-        if (shouldLog("info")) {
+        if (shouldLog(LEVEL_INFO) && logger.isInfoEnabled()) {
             logger.info(getColoredMessage("INFO", ANSI_CYAN, message));
         }
     }
 
     public void error(String message) {
-        if (shouldLog("error")) {
+        if (shouldLog(LEVEL_ERROR) && logger.isErrorEnabled()) {
             logger.error(getColoredMessage("ERROR", ANSI_RED, message));
         }
     }
 
     public void warn(String message) {
-        if (shouldLog("warn")) {
+        if (shouldLog(LEVEL_WARN) && logger.isWarnEnabled()) {
             logger.warn(getColoredMessage("WARN", ANSI_YELLOW, message));
         }
     }
 
     public void debug(String message) {
-        if (shouldLog("debug")) {
+        if (shouldLog("debug") && logger.isDebugEnabled()) {
             logger.debug(getColoredMessage("DEBUG", ANSI_BLUE, message));
         }
     }
 
     public void fatal(String message) {
-        if (shouldLog("fatal")) {
+        if (shouldLog("fatal") && logger.isErrorEnabled()) {
             logger.error(getColoredMessage("FATAL", ANSI_PURPLE, message));
         }
     }
@@ -67,52 +81,37 @@ public class CustomLogger {
             String errorMessage,
             int statusCode,
             HttpServletRequest request) {
-        if (shouldLog("error")) {
-            String logMessage =
-                    String.format(
-                            "\n%s[ERROR] %s%s\n"
-                                    + "%s* ERROR CODE:    %s%s\n"
-                                    + "%s* ERROR MESSAGE: %s%s\n"
-                                    + "%s* STATUS CODE:   %d%s\n"
-                                    + "%s* PATH:          %s%s\n"
-                                    + "%s* METHOD:        %s%s\n"
-                                    + "%s* BODY:          %s%s\n"
-                                    + "%s* STACK TRACE:   %s%s\n"
-                                    + "%s━━━━━━━━━━━━━━━━",
-                            ANSI_RED,
-                            new java.util.Date().toString(),
-                            ANSI_RESET,
-                            ANSI_RED,
-                            errorCode,
-                            ANSI_RESET,
-                            ANSI_RED,
-                            errorMessage,
-                            ANSI_RESET,
-                            ANSI_RED,
-                            statusCode,
-                            ANSI_RESET,
-                            ANSI_RED,
-                            request.getRequestURI(),
-                            ANSI_RESET,
-                            ANSI_RED,
-                            request.getMethod(),
-                            ANSI_RESET,
-                            ANSI_RED,
-                            sanitizeRequestBody(request),
-                            ANSI_RESET,
-                            ANSI_RED,
-                            e.getStackTrace()[0],
-                            ANSI_RESET,
-                            ANSI_RED);
+        if (shouldLog(LEVEL_ERROR) && logger.isErrorEnabled()) {
+            String logMessage = String.format("""
+                            %s[ERROR] %s%s
+                            %s* ERROR CODE:    %s%s
+                            %s* ERROR MESSAGE: %s%s
+                            %s* STATUS CODE:   %d%s
+                            %s* PATH:          %s%s
+                            %s* METHOD:        %s%s
+                            %s* BODY:          %s%s
+                            %s* STACK TRACE:   %s%s
+                            %s━━━━━━━━━━━━━━━━
+                            """,
+                    ANSI_RED, new Date(), ANSI_RESET,
+                    ANSI_RED, errorCode, ANSI_RESET,
+                    ANSI_RED, errorMessage, ANSI_RESET,
+                    ANSI_RED, statusCode, ANSI_RESET,
+                    ANSI_RED, request.getRequestURI(), ANSI_RESET,
+                    ANSI_RED, request.getMethod(), ANSI_RESET,
+                    ANSI_RED, sanitizeRequestBody(request), ANSI_RESET,
+                    ANSI_RED, e.getStackTrace()[0], ANSI_RESET,
+                    ANSI_RED
+            );
             logger.error(logMessage);
         }
     }
 
     private boolean shouldLog(String level) {
-        if ("production".equals(logLevel)) {
-            return Arrays.asList("error", "warn", "info").contains(level);
+        if ("production".equalsIgnoreCase(logLevel)) {
+            return List.of(LEVEL_ERROR, LEVEL_WARN, LEVEL_INFO).contains(level);
         }
-        return true; // development 환경에서는 모든 레벨의 로그 출력
+        return true; // development 환경에서는 모든 로그 허용
     }
 
     private String getColoredMessage(String level, String color, String message) {
@@ -121,64 +120,69 @@ public class CustomLogger {
 
     private String sanitizeRequestBody(HttpServletRequest request) {
         try {
-            String body =
-                    request.getReader().lines().collect(java.util.stream.Collectors.joining());
-            if (body.isEmpty()) {
-                return "{}";
-            }
-            return sanitizeSensitiveData(body);
-        } catch (Exception e) {
+            String body = request.getReader().lines().collect(Collectors.joining());
+            return body.isEmpty() ? "{}" : sanitizeSensitiveData(body);
+        } catch (IOException e) {
             return "{}";
         }
     }
 
     private String sanitizeSensitiveData(String body) {
-        List<String> sensitiveFields =
-                Arrays.asList("password", "token", "secret", "authorization");
-        for (String field : sensitiveFields) {
-            body =
-                    body.replaceAll(
-                            "(?i)\"" + field + "\":\"[^\"]*\"", "\"" + field + "\":\"[REDACTED]\"");
+        for (String field : SENSITIVE_FIELDS) {
+            body = body.replaceAll("(?i)\"" + field + "\":\"[^\"]*\"",
+                    "\"" + field + "\":\"" + REDACTED + "\"");
         }
         return body;
     }
 
     public void log(String message, String context) {
-        MDC.put("context", context);
-        logger.info(message);
-        MDC.remove("context");
+        if (logger.isInfoEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.info(message);
+            MDC.remove(MDC_CONTEXT);
+        }
     }
 
     public void error(String message, String trace, String context) {
-        MDC.put("context", context);
-        MDC.put("trace", trace);
-        logger.error(message);
-        MDC.remove("context");
-        MDC.remove("trace");
+        if (logger.isErrorEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            MDC.put(MDC_TRACE, trace);
+            logger.error(message);
+            MDC.remove(MDC_CONTEXT);
+            MDC.remove(MDC_TRACE);
+        }
     }
 
     public void warn(String message, String context) {
-        MDC.put("context", context);
-        logger.warn(message);
-        MDC.remove("context");
+        if (logger.isWarnEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.warn(message);
+            MDC.remove(MDC_CONTEXT);
+        }
     }
 
     public void debug(String message, String context) {
-        MDC.put("context", context);
-        logger.debug(message);
-        MDC.remove("context");
+        if (logger.isDebugEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.debug(message);
+            MDC.remove(MDC_CONTEXT);
+        }
     }
 
     public void verbose(String message, String context) {
-        MDC.put("context", context);
-        logger.trace(message);
-        MDC.remove("context");
+        if (logger.isTraceEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.trace(message);
+            MDC.remove(MDC_CONTEXT);
+        }
     }
 
     public void fatal(String message, String context) {
-        MDC.put("context", context);
-        logger.error(message);
-        MDC.remove("context");
+        if (logger.isErrorEnabled()) {
+            MDC.put(MDC_CONTEXT, context);
+            logger.error(message);
+            MDC.remove(MDC_CONTEXT);
+        }
     }
 
     private boolean isSensitiveField(String fieldName) {
